1156-careers button alignment fix
1156-careers button alignment fix

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/custom-common.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/custom-common.scss
@@ -341,6 +341,35 @@ img {
   }
 }
 
+#careersBtnWrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  >.button {
+    width: 100%;
+    &:first-child {
+      margin-bottom: toRem(16);
+    }
+    .cmp-button {
+      width: 100%;
+    }
+  }
+  @media (min-width: 768px) {
+    flex-direction: row;
+    >.button {
+      width: auto;
+      &:first-child {
+        margin-right: toRem(24);
+        margin-bottom: 0;
+      }
+      .cmp-button {
+        min-width: 282px;
+      }
+    }
+  }
+}
+
 .img-responsive {
   display: block;
   height: auto;
